# marvelous-databricks-course-hoogvliets

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  config.yml  pyproject.toml
.github/: CODEOWNERS
notebooks/: messy_notebook.py  tidy_notebook.py
scripts/: get_data_kaggle.sh
src/: __init__.py
src/powercons/: io.py  preprocessing.py
